# hroamer

./: README.md  hroamer.cabal
lib/Hroamer/: Char.hs  Core.hs  DataStructures.hs  Database.hs  Exception.hs  FileOps.hs  Interfaces.hs  Main.hs  Parser.hs  Path.hs  StateFile.hs  UnsupportedPaths.hs  Utilities.hs
lib/Hroamer/Database/: Internal.hs
lib/Hroamer/FileOps/: Internal.hs
lib/Hroamer/UnsupportedPaths/: Internal.hs
src/: Main.hs
src/Hroamer/: Database.hs  Parser.hs  Path.hs  UnsupportedPaths.hs  Utilities.hs
test/: TestHelpers.hs
test/Hroamer/: CoreSpec.hs  DatabaseSpec.hs  FileOpsSpec.hs  ParserSpec.hs  PathSpec.hs  StateFileSpec.hs  UnsupportedPathsSpec.hs
test/Hroamer/Database/: InternalSpec.hs
test/Hroamer/FileOps/: InternalSpec.hs
test/Hroamer/UnsupportedPaths/: InternalSpec.hs
