name:                hroamer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yanhan/hroamer#readme
license:             MIT
license-file:        LICENSE
author:              Pang Yan Han
maintainer:          example@example.com
copyright:           2017 Pang Yan Han
category:            program
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hroamer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  build-depends:       hroamer
                     , base >= 4.7 && < 5
                     , containers
                     , directory
                     , dlist
                     , filepath
                     , foundation
                     , mtl
                     , parsec
                     , process
                     , resourcet
                     , text
                     , time
                     , unix

-- Not the best solution but we are not using Cabal 2 so this will make do
library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  DefaultSignatures
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , directory
                     , dlist
                     , filepath
                     , foundation
                     , mtl
                     , parsec
                     , process
                     , sqlite-simple
                     , temporary
                     , transformers
                     , text
                     , unix
                     , uuid

  exposed-modules:     Hroamer.Char
                     , Hroamer.Core
                     , Hroamer.DataStructures
                     , Hroamer.Database
                     , Hroamer.Exception
                     , Hroamer.FileOps
                     , Hroamer.Interfaces
                     , Hroamer.Parser
                     , Hroamer.Main
                     , Hroamer.Path
                     , Hroamer.StateFile
                     , Hroamer.UnsupportedPaths
                     , Hroamer.Utilities
                     , Hroamer.Database.Internal
                     , Hroamer.FileOps.Internal
                     , Hroamer.UnsupportedPaths.Internal

test-suite hroamer-testsuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -threaded
  build-depends:       hroamer
                     , base >= 4.7 && < 5
                     , containers
                     , directory
                     , dlist
                     , filepath
                     , foundation
                     , hspec
                     , hspec-core
                     , mtl
                     , parsec
                     , process
                     , sqlite-simple
                     , temporary
                     , text
                     , QuickCheck
  other-modules:       Hroamer.CoreSpec
                     , Hroamer.Database.InternalSpec
                     , Hroamer.DatabaseSpec
                     , Hroamer.FileOpsSpec
                     , Hroamer.FileOps.InternalSpec
                     , Hroamer.ParserSpec
                     , Hroamer.PathSpec
                     , Hroamer.StateFileSpec
                     , Hroamer.UnsupportedPathsSpec
                     , Hroamer.UnsupportedPaths.InternalSpec
                     , TestHelpers
